# Autodesk-Scaleform-GFx-SDK

./: ChangeLog  ChangeLog.md  Scaleform 4 3 README.rtf  Scaleform 4 4 README.rtf  readme.md  verify.sh
Apps/ShippingPlayer/: FxShippingPlayer.cpp  FxShippingPlayer.h
Apps/Tutorial/: Tutorial - Msvc11.sln
Doc/: sf_4.3_reference.chm
Doc/4.4/: sf_4.4_reference.chm
Include/: GFxConfigVideo.windows.h  GFxVersion.h  iob_func_fix.h
Include4.4/: GFxCompat.h  GFxConfig.h  GFxConfigAddons.h  GFxVersion.h  GFx_Render.h
Lib/: ReadMe.md
Projects/: Makefile  libgfxrender_gl.txt  libgfxrendermodel.txt
Projects/cmake/: CMakeLists.txt
Projects/cmake/SDK/: BuildOptions.cmake
Src/GFx/: GFx_ASUtils.cpp  GFx_ButtonDef.cpp  GFx_DisplayObject.cpp  GFx_DisplayObject.h  GFx_FontResource.cpp  GFx_LoaderImpl.cpp  GFx_MovieDef.cpp  GFx_PlayerImpl.cpp  GFx_ShapeSwf.cpp  GFx_StaticText.cpp  GFx_Stream.cpp  GFx_TagLoaders.cpp  GFx_TextField.cpp  GFx_TextField.h
Src/Kernel/: SF_Alg.h  SF_AmpInterface.h  SF_MsgFormat.cpp  SF_MsgFormat.h  SF_SIMD_SSE.h  SF_String.cpp  SF_ThreadsWinAPI.cpp
Src/Platform/: Platform.h  Platform_D3D1x.cpp  Platform_D3D9.cpp  Platform_WinAPI.cpp  Platform_WinAPI_GL.cpp
Src/Render/: Render_Color.cpp  Render_Containers.h  Render_Context.cpp  Render_DrawableImage_SW.cpp  Render_GlyphCache.cpp  Render_GlyphParam.h  Render_GlyphQueue.cpp  Render_HAL.h  Render_Hairliner.cpp  Render_Image.cpp  Render_Matrix2x4.h  Render_Matrix3x4.cpp  Render_Point3.h  Render_Profiler.cpp  Render_Profiler.h  Render_ShaderHAL.h  Render_ShapeMeshProvider.cpp  Render_States.h  (+9 more)
(+553 files in other folders)
